--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SECRET_KEY=123
-NEXT_PUBLIC_API_URL=http://127.0.0.1:5000
+NEXT_PUBLIC_SECRET_KEY=rsJyQXRVQawQH7gELErOgvUSLjDH8ICqzmDRMTSwfLA=
+NEXT_PUBLIC_API_URL=https://stripe-generico-production.up.railway.app
