section cron generated

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_SECRET_KEY=rsJyQXRVQawQH7gELErOgvUSLjDH8ICqzmDRMTSwfLA=
-NEXT_PUBLIC_API_URL=https://stripe-generico-production.up.railway.app
+NEXT_PUBLIC_SECRET_KEY=qNzxSSqrz5OFz91wI7Bm6GOWrj5iFQz6
+NEXT_PUBLIC_API_URL=http://localhost:5000
+
+#NEXT_PUBLIC_API_URL=https://stripe-generico-production.up.railway.app
