--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,11 @@
 {
+  "singleQuote": true,
   "arrowParens": "avoid",
   "bracketSpacing": true,
   "jsxSingleQuote": false,
   "printWidth": 150,
   "quoteProps": "as-needed",
   "semi": false,
-  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "none",
-  "useTabs": false
+  "trailingComma": "none"
 }
